# RASPPPy

./: .gitignore  README.md  build.bat  config.toml  index.js  main.js  main.py  package.json  pyproject.toml  requirements.txt
client/: index.html  main.css  preload.js
client/scripts/: canvas_editor.js  canvas_objects.js  runtime.js  utils.js
core/: audio_server.py  audio_utils.py  config.py  logger.py  object.py  patch.py  runtime.py  runtime_data.py  utils.py
docs/: README.md  about.md  differences.md  structure.drawio  structure.md
examples/: add.json  add_example.json  phasor_loopback.json
objects/: __init__.py
objects/advanced/: vad_dsp.py  whisper.py
objects/audio/: adc_dsp.py  dac_dsp.py  multiply_dsp.py  phasor_dsp.py
objects/audio_modules/: phasor_dsp.py
objects/general/: bang.js  bang.py  delay.py  number.py  print.py  trigger.py
objects/math/: add.py  multiply.py
objects/time/: delay.py
raspppy/: config.toml  main.js  main.py  package-lock.json  package.json  requirements.txt
raspppy/client/: index.html  main.css  preload.js
raspppy/client/scripts/: canvas_editor.js  canvas_objects.js  patch.js  runtime.js  utils.js
raspppy/core/: api.py  audio_server.py  audio_utils.py  config.py  logger.py  object.py  patch.py  runtime.py  runtime_data.py  utils.py
raspppy/internals/: __init__.py
raspppy/internals/audio/: adc_dsp.py  dac_dsp.py
raspppy/internals/audio_math/: multiply_dsp.py
raspppy/internals/audio_modules/: osc_dsp.py  phasor_dsp.py
raspppy/internals/general/: bang.js  bang.py  number.py  print.py  trigger.py
(+9 files in other folders)
