[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raspppy"
version = "0.0.1"
description = "A visual programming language for creating and running real-time audio prototypes"
authors = [{ name = "Kevin Huang", email = "origamijr@sbcglobal.net" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: JavaScript",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "Eel>=0.16.0",
    "toml>=0.10.2",
    "sounddevice>=0.4.6",
    "scipy>=1.11.2",
    "numpy>=1.24.4",
]

[project.scripts]
raspppy = "raspppy.main:start_client"

[project.urls]
"Homepage" = "https://github.com/Origamijr/RASPPPy"
"Bug Tracker" = "https://github.com/Origamijr/RASPPPy/issues"
